# book-service

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.alembic  Dockerfile.db  Makefile  README.MD  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: api-development.mdc  architecture-overview.mdc  coding-standards.mdc  database-patterns.mdc  ddd-patterns.mdc  development-workflow.mdc  devops-patterns.mdc  project-summary.mdc  testing-patterns.mdc
alembic/: env.py
alembic/versions/: 28ad4b3e8ac4_.py  314ebf09665b_book_published_date_as_date.py  59b477dc7456_.py  8a3e18f16f8a_init.py  a5a87c1a850d_.py  fbf0c0272c9d_.py
logstash/pipeline/: logstash.conf
src/: __main__.py
src/api/: __main__.py
src/application/: exceptions.py
src/application/dto/: author.py  base.py  book_category.py  book_data.py  book_dto.py  branch.py  physical_exemplar.py  producer.py
src/application/ports/database/: author.py  book.py  book_category.py  branch.py  physical_exemplar.py
src/application/ports/producer/: author_producer.py  base_producer.py  book_category_producer.py  book_producer.py  branch_producer.py  physical_exemplar_producer.py
src/application/ports/route/: basic_router.py
src/application/ports/usecase/: consumer.py
src/application/usecase/: create_book.py
src/application/usecase/author/: create_author.py  delete_author.py  delete_author_publish.py  filter_author.py  get_by_id.py  update_author_produce.py  upsert_author.py
src/application/usecase/book/: create_book_produce.py  delete_book.py  delete_book_publish.py  filter_book.py  get_book_by_id.py  update_book_produce.py  upsert_book.py  upsert_book_produce.py
src/application/usecase/book_category/: book_category_filter.py  book_category_publish.py  upsert_book_category.py
src/application/usecase/branch/: filter_branch.py  upsert_branch.py  upsert_branch_produce.py
src/application/usecase/physical_exemplar/: filter_physical_exemplar_by_branch.py  get_physical_exemplar_by_book_and_branch.py  upsert_physical_exemplar.py  upsert_physical_exemplar_produce.py
src/consumer/: __main__.py
src/domain/entities/: author.py  base.py  book.py  book_category.py  book_data.py  branch.py  physical_exemplar.py
src/domain/enums/: book_type.py  user_type.py
src/infrastructure/adapters/database/: README.md
src/infrastructure/adapters/entrypoints/: consumer.py  producer.py
src/infrastructure/adapters/producer/: author_producer.py  book_category_producer.py  book_producer.py  branch_producer.py  physical_exemplar_producer.py  producer.py
src/infrastructure/cross_cutting/: middleware_context.py  middleware_logging.py
src/infrastructure/database/: README.md  sharding.py
src/infrastructure/database/db/: session.py
src/infrastructure/database/models/: author.py  author_book_link.py  base.py  book.py  book_book_category_link.py  book_category.py  book_data.py  book_lending.py  branch.py  physical_exemplar.py  user.py  user_configuration.py
src/infrastructure/logs/: logstash.py
src/infrastructure/settings/: config.py  elasticsearch_mappings.json  environments.py  web_application.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py
tests/integration/author/: conftest.py  test_create_author.py  test_delete_author.py  test_filter_author.py  test_get_author_by_id.py  test_update_author.py
tests/integration/book/: __init__.py  conftest.py  test_create_book.py  test_delete_book.py  test_filter_book.py  test_get_book_by_id.py  test_update_book.py
tests/integration/book_category/: conftest.py  test_create_book_category.py  test_filter_book_category.py
tests/integration/branch/: conftest.py  test_create_branch.py  test_filter_branch.py
tests/integration/physical_exemplar/: conftest.py  test_create_physical_exemplar.py  test_filter_physical_exemplar_by_branch.py  test_get_physical_exemplar.py
tests/unit/author/: conftest.py
tests/unit/author/producer/: conftest.py  test_delete_author.py  test_external_author_deletion.py  test_external_author_upsert.py  test_upsert_author.py
tests/unit/author/repository/: conftest.py  test_delete_author.py  test_get_author_by_filter.py  test_get_author_by_id.py  test_get_authors_by_ids.py  test_upsert_author.py
tests/unit/author/usecase/: conftest.py  test_create_author.py  test_delete_author.py  test_delete_author_publish.py  test_filter_author.py  test_get_by_id.py  test_update_author_produce.py  test_upsert_author.py
tests/unit/book/: conftest.py
tests/unit/book/producer/: conftest.py  test_delete_book.py  test_external_book_deletion.py  test_external_book_upsert.py  test_upsert_book.py
tests/unit/book/repository/: conftest.py  test_delete_book.py  test_get_book_by_filter.py  test_get_book_by_id.py  test_upsert_book.py
tests/unit/book/usecase/: conftest.py  test_delete_book.py  test_delete_book_publish.py  test_filter_book.py  test_get_book_by_id.py  test_upsert_book.py  test_upsert_book_produce.py
tests/unit/book_category/: conftest.py
tests/unit/book_category/producer/: conftest.py  test_upsert_book_category.py
tests/unit/book_category/repository/: conftest.py  test_delete_book_category.py  test_get_book_categories_by_ids.py  test_get_book_category_by_filter.py  test_get_book_category_by_id.py  test_get_book_category_by_title.py  test_upsert_book_category.py
tests/unit/book_category/usecase/: conftest.py  test_book_category_filter.py  test_book_category_publish.py  test_upsert_book_category.py
tests/unit/branch/: conftest.py
tests/unit/branch/producer/: conftest.py  test_upsert_branch.py
tests/unit/branch/repository/: conftest.py  test_get_branch_by_filter.py  test_upsert_branch.py
tests/unit/branch/usecase/: conftest.py  test_filter_branch.py  test_upsert_branch.py  test_upsert_branch_produce.py
tests/unit/physical_exemplar/: conftest.py
tests/unit/physical_exemplar/producer/: conftest.py  test_external_physical_exemplar_upsert.py  test_upsert_physical_exemplar.py
tests/unit/physical_exemplar/repository/: conftest.py  test_upsert_physical_exemplar.py  (+2 more)
(+59 files in other folders)
